# qt6qml-multi-qmlmodule

./: CMakeLists.txt  main.cpp  main.qml
Tools/: CMakeLists.txt  Tool.qml
